correção scroll no eixo-x

--- a/index.html
+++ b/index.html
@@ -49,7 +49,127 @@
             </div>
         </nav>
  </header><!-- /fim cabeçalho -->
-
+ <main>
+    <section class="bg-warning text-light"><!-- inicio seção capa -->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 d-flex"><!-- inicio area texto -->
+                    <div class="align-self-center">
+                        <h1 class="display-4 mb-2">Suas contas, descomplicadas</h1>
+                        <p class="mb-4">Usado por pessoas que buscam facilidade e praticidade na hora de resolver sua vidafinanceira</p>
+                        <form>
+                            <div class="ml-auto input-group input-group-lg mb-4">
+                                <input class="form-control" type="email"placeholder="Seu e-mail" name="mail" id="iemail">
+                                <div class="input-group-append">
+                                    <button class="ml-1 btn btn-primary">Cadastre-se</button>
+                                </div>
+                            </div>
+                        </form>
+                        <p>
+                            Disponível para: <a href="#" class="btn btn-outline-light"><i class="fab fa-android fa-lg"></i></a>
+                            <a href="#" class="btn btn-outline-light"><i class="fab fa-apple fa-lg"></i></a>
+                        </p>
+                    </div>
+                </div><!-- fim area texto -->
+                <div class="col-md-6 d-flex"><!-- imagem/capa -->
+                    <div class="align-self-center">
+                        <img src="img/capa-mulher.png" height="512" alt="mulher">
+                    </div>
+                </div><!-- fim imagem/capa -->
+            </div>
+        </div>
+    </section><!-- fim seção capa -->
+    <section class="bg-light text-dark"><!-- inicio seção saiba mais -->
+            <div class="container">
+                <div class="row box">
+                    <div class="col-md-6 d-flex">
+                        <div class="align-self-center">
+                            <h1>Saiba para onde esta indo seu dinheiro</h1>
+                            <p>Com o Finans, você categoriza todos os seus lançamentos. Com gráficos simples, você sabe de onde vem epara onde vai seu dinheiro.</p>
+                            <button class="btn btn-outline-warning">Veja mais</button>
+                        </div>
+                    </div>
+                    <div class="col-md-6 d-flex">
+                        <div class="align-self-center"><img src="img/saiba.png" class="img-fluid" alt="imagem saiba mais"></div>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <section class="bg-light text-dark"><!-- inicio seção juros -->
+        <div class="container">
+            <div class="row box">
+                <div class="col-md-6 d-flex order-2">
+                    <div class="align-self-center">
+                        <h1>Pare de pagar juros e economize</h1>
+                        <p>Dificuldade para manter suas contas em dias e não conseguri ter controle sobre seus boletos? Com o finans isso pode mudar agora!.</p>
+                        <button class="btn btn-outline-warning">Veja mais</button>
+                    </div>
+                </div>
+                <div class="col-md-6 d-flex order-1">
+                    <div class="align-self-center"><img src="img/juros.png" class="img-fluid" alt="imagem saiba mais"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <article>
+                <div class="row box">
+                    <div class="col-sm-4">
+                        <div class="align-self-center">
+                            <img src="img/facil.png" class="img-fluid" alt="fácil de usar">
+                            <h1>Fácil de usar</h1>
+                            <p>Finans vai além do básico e entrega ao usuário um software automatizado para facilitar sua vida e te ajudar.</p>
+                          </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="align-self-center">
+                            <img src="img/economize.png" class="img-fluid" alt="economize">
+                            <h1>Economize seu tempo</h1>
+                            <p>Tempo é dinheiro! Em segundos você pode enviar e receber tranferência e puxar o extrato no mesmo momento mantendo todos os seus dados atualizados.</p>
+                          </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="align-self-center">
+                            <img src="img/suporte.png" class="img-fluid" alt="Suporte amigo">
+                            <h1>Suporte amigo</h1>
+                            <p>Dúvidas? Perguntas? Isso não é problema porque na nossa central existe uma equipe especializada para te atender a qualquer momento..</p>
+                          </div>
+                    </div>
+                </div>
+            </article>
+        </div>
+    </section>
+</main><!-- fim conteúdo principal -->
+<footer class="pt-2 pb-2 "><!-- inicio rodapé -->
+    <div class="container">
+       <div class="row">
+           <div class="navbar navbar-expand-sm">
+               <ul class="navbar-nav col-md-8">
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Benefícios</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Recursos</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Preços</a>
+                </li>
+               </ul>
+           </div>
+           <div class="text-dark col-md-6 d-flex justify-content-end align-items-center ml-auto">
+            <a href="#" class="mr-2 btn btn-outline-warning"><i class="fab fa-facebook fa-lg"></i></a>
+            <a href="#" class="mr-2 btn btn-outline-warning"><i class="fab fa-instagram fa-lg"></i></a>
+            <a href="#" class="mr-2 btn btn-outline-warning"><i class="fab fa-youtube fa-lg"></i></a>
+            <a href="#" class="mr-2 btn btn-outline-warning"><i class="fab fa-twitter fa-lg"></i></a>
+          </div>
+           </div>
+       </div>
+    </div>
+</footer><!-- fim rodapé -->
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
